// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`defineSqlSchemaControlCodeForDomainObject should look right for a domain object with static array properties 1`] = `
"# train_located_event
- type: resource
  path: ./tables/train_located_event.sql
- type: resource
  path: ./tables/train_located_event_to_geocode.sql
- type: resource
  path: ./tables/train_located_event_to_sensor_uuid.sql
- type: resource
  path: ./views/view_train_located_event_current.sql
- type: resource
  path: ./views/view_train_located_event_hydrated.sql
- type: resource
  path: ./functions/upsert_train_located_event.sql"
`;

exports[`defineSqlSchemaControlCodeForDomainObject should look right for a domain object with updatable array properties 1`] = `
"# train
- type: resource
  path: ./tables/train.sql
- type: resource
  path: ./tables/train_to_badge.sql
- type: resource
  path: ./tables/train_version.sql
- type: resource
  path: ./tables/train_version_to_locomotive.sql
- type: resource
  path: ./tables/train_version_to_sensor_uuid.sql
- type: resource
  path: ./tables/train_cvp.sql
- type: resource
  path: ./views/view_train_current.sql
- type: resource
  path: ./views/view_train_hydrated.sql
- type: resource
  path: ./functions/upsert_train.sql"
`;

exports[`defineSqlSchemaControlCodeForDomainObject should look right for a domain object with updatable properties 1`] = `
"# carriage
- type: resource
  path: ./tables/carriage.sql
- type: resource
  path: ./tables/carriage_version.sql
- type: resource
  path: ./tables/carriage_cvp.sql
- type: resource
  path: ./views/view_carriage_current.sql
- type: resource
  path: ./views/view_carriage_hydrated.sql
- type: resource
  path: ./functions/upsert_carriage.sql"
`;

exports[`defineSqlSchemaControlCodeForDomainObject should look right for a simple domain literal 1`] = `
"# geocode
- type: resource
  path: ./tables/geocode.sql
- type: resource
  path: ./views/view_geocode_hydrated.sql
- type: resource
  path: ./functions/upsert_geocode.sql"
`;

exports[`defineSqlSchemaControlCodeForDomainObject should not declare a uuid join table for a _uuids-suffix number[] (it is a native array, not a uuid reference) 1`] = `
"# post
- type: resource
  path: ./tables/post.sql
- type: resource
  path: ./views/view_post_current.sql
- type: resource
  path: ./views/view_post_hydrated.sql
- type: resource
  path: ./functions/upsert_post.sql"
`;

exports[`defineSqlSchemaControlCodeForDomainObject should not emit a join table (and not crash) for native primitive and enum arrays 1`] = `
"# post
- type: resource
  path: ./tables/post.sql
- type: resource
  path: ./views/view_post_current.sql
- type: resource
  path: ./views/view_post_hydrated.sql
- type: resource
  path: ./functions/upsert_post.sql"
`;

exports[`defineSqlSchemaControlCodeForDomainObject should not emit a join table (and not crash) for updatable native primitive and enum arrays on the version table 1`] = `
"# post
- type: resource
  path: ./tables/post.sql
- type: resource
  path: ./tables/post_version.sql
- type: resource
  path: ./tables/post_cvp.sql
- type: resource
  path: ./views/view_post_current.sql
- type: resource
  path: ./views/view_post_hydrated.sql
- type: resource
  path: ./functions/upsert_post.sql"
`;
